--- a/DatingApp/DatingApp.API/appsettings.json
+++ b/DatingApp/DatingApp.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Token": "tOEauhyyKDWzd1lWABXpzKSI2ydIm7Cr"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=AngularApi;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
