Creating User Editing Component

--- a/DatingApp/DatingApp.SPA/DatingApp.SPA.csproj
+++ b/DatingApp/DatingApp.SPA/DatingApp.SPA.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="DatingApp-SPA\src\app\routes.ts" />
+    <None Remove="DatingApp-SPA\src\app\_guards\prevent-unsaved-changes.guard.ts" />
     <None Remove="DatingApp-SPA\src\app\_models\photo.ts" />
     <None Remove="DatingApp-SPA\src\app\_models\user.ts" />
     <None Remove="DatingApp-SPA\src\app\_services\error.interceptor.ts" />
@@ -15,6 +16,7 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="DatingApp-SPA\src\app\routes.ts" />
+    <TypeScriptCompile Include="DatingApp-SPA\src\app\_guards\prevent-unsaved-changes.guard.ts" />
     <TypeScriptCompile Include="DatingApp-SPA\src\app\_models\photo.ts" />
     <TypeScriptCompile Include="DatingApp-SPA\src\app\_models\user.ts" />
     <TypeScriptCompile Include="DatingApp-SPA\src\app\_services\error.interceptor.ts" />
@@ -22,8 +24,6 @@
 
   <ItemGroup>
     <Folder Include="DatingApp-SPA\src\app\members\" />
-    <Folder Include="DatingApp-SPA\src\app\_resolvers\" />
-    <Folder Include="DatingApp-SPA\src\app\_guards\" />
   </ItemGroup>
 
 </Project>
