Adding Photos Ediit Component

--- a/DatingApp/DatingApp.API/appsettings.json
+++ b/DatingApp/DatingApp.API/appsettings.json
@@ -10,5 +10,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dxegn7nzj",
+    "ApiKey": "591159421296913",
+    "ApiSecret": "B8GlJGDRhgrhv4q6uznJ-yO0RZQ"
+  }
+
 }
